# bombay

./: .gitignore  CLAUDE.md  Cargo.toml  NOTICE  README.md  SECURITY.md  _typos.toml  clippy.toml  deny.toml  flake.nix  mutants-baseline.json  result-1  rust-toolchain.toml
.auto/: checks.sh  log.jsonl  measure.sh  prompt.md
.cargo/: mutants.toml
.githooks/: post-merge  pre-commit  pre-push
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: checks.yml  codspeed.yml  coverage.yml  fuzz.yml  miri.yml  mutants.yml
actors/: Cargo.toml
actors/src/: broker.rs  lib.rs  message_bus.rs  message_queue.rs  pool.rs  pubsub.rs  scheduler.rs
actors/tests/: broker_bdd.rs  broker_props_bdd.rs  message_bus_bdd.rs  message_bus_props_bdd.rs  message_queue_bdd.rs  message_queue_bug_bdd.rs  message_queue_props_bdd.rs  pool_bdd.rs  pool_props_bdd.rs  pubsub_bdd.rs  pubsub_bug_bdd.rs  pubsub_props_bdd.rs  scheduler_bdd.rs  scheduler_props_bdd.rs
actors/tests/steps/: broker.rs  message_bus.rs  message_bus_props.rs  message_queue.rs  pool.rs  pubsub.rs  scheduler.rs
benches/: overhead.rs
bombay-core/: Cargo.toml
bombay-core/benches/: channels.rs  mailbox.rs  registry_vs_kameo.rs  reply.rs  request_vs_kameo.rs  watcher_fanout.rs
bombay-core/examples/: msg_budget.rs
bombay-core/proptest-regressions/: mailbox.txt
bombay-core/src/: error.rs  lib.rs  mailbox.rs  message.rs  registry.rs  reply.rs  request.rs  restart.rs  test_support.rs  watch.rs
bombay-core/src/actor/: actor_ref.rs  kind.rs  mod.rs  recipient.rs  spawn.rs  supervision.rs
bombay-core/tests/: alloc_clone.rs  alloc_exact.rs  alloc_request.rs  dst_races.rs  invariants.rs  msg_mailbox_compose.rs
console/: Cargo.toml  README.md
console/src/: lib.rs  main.rs  poller.rs  tui.rs
console/tests/: poller_bdd.rs  poller_props_bdd.rs  pty_smoke.rs  tui_bdd.rs  tui_props_bdd.rs  tui_render.rs
console/tests/steps/: mod.rs  poller.rs  poller_props.rs  tui.rs  tui_props.rs
coverage/: index.html
docs/: review-registry-mailbox.md
docs/adr/: 0001-mailbox-channel-primitive.md  0002-reply-channel-primitive.md  0003-actor-ref-self-reference-and-refcount-stop.md  0004-recipient-conversion-boundary-erasure.md  0005-loom-shuttle-na-miri-for-ref-model.md  0006-mutation-viable-ratchet.md  0007-request-builders-hand-rolled-not-bon.md  0008-send-timeout-guaranteed-handback.md  0009-registry-papaya-no-trait-seam.md  0010-single-allocation-actor-ref.md  0011-watch-capability-runtime-result-not-typestate.md  0012-restart-accounting-counters-not-window.md  0013-virtual-actors-not-in-core.md  README.md
docs/superpowers/plans/: 2026-06-24-console-cucumber-harness.md  2026-06-26-core-cucumber-wiring.md  2026-07-05-116-actor-trait-loop.md  2026-07-05-msg-model-size-tripwire.md  2026-07-05-reply-channel-primitive.md  2026-07-13-145-recipient.md  2026-07-13-149-bolero-fuzz-workspace.md  2026-07-16-150-miri-ref-model-dst.md  2026-07-16-151-counting-allocator.md  2026-07-17-164-actor-loop-fuzz.md  2026-07-17-171-165-mutation-gate.md  2026-07-23-195-links-death-watch.md  2026-07-24-196-restart-supervision.md
docs/superpowers/specs/: 2026-06-23-fork-strategy-design.md  2026-06-24-console-cucumber-harness-design.md  2026-06-26-core-cucumber-wiring-design.md  2026-07-02-pty-e2e-smoke-design.md  2026-07-05-116-actor-trait-loop-design.md  2026-07-05-msg-model-size-tripwire-design.md  2026-07-05-reply-channel-primitive-design.md  2026-07-13-145-recipient-design.md  2026-07-13-149-bolero-fuzz-workspace-design.md  2026-07-16-150-miri-ref-model-dst-design.md  2026-07-16-151-counting-allocator-design.md  2026-07-17-164-actor-loop-fuzz-design.md  2026-07-17-171-165-mutation-gate-design.md  2026-07-23-120-links-death-watch-design.md  2026-07-24-196-restart-supervision-design.md
docs/testing/: README.md  coverage-audit.md  coverage-baseline.md  invariants.md  properties.md
docs/zenoh/: capabilities.md
examples/: basic.rs  broker.rs  console.rs  custom_swarm.rs  forward.rs  forward_with_fallback.rs  macro.rs  message_bus.rs  message_queue.rs  message_queue_headers.rs  pool.rs  prometheus_metrics.rs  pubsub.rs  pubsub_filter.rs  registry.rs  remote.rs  stream.rs  supervision.rs
fuzz/: Cargo.toml
fuzz/tests/: actor_loop.rs  mailbox.rs  registry.rs  reply.rs
fuzz/tests/__fuzz__/stop_reason_preserved_through_panicking_on_stop/corpus/: seed-ops
macros/: Cargo.toml
macros/src/: derive_actor.rs  derive_msg.rs  derive_remote_actor.rs  derive_reply.rs  lib.rs  messages.rs  remote_message.rs
macros/tests/: derive_msg.rs
mutants-gate/: Cargo.toml
mutants-gate/src/: gate.rs  main.rs  model.rs
src/: actor.rs  console.rs  error.rs  lib.rs  links.rs  mailbox.rs  message.rs  remote.rs  reply.rs  request.rs  supervision.rs
src/actor/: actor_ref.rs  id.rs  kind.rs  spawn.rs
src/console/: demo.rs  registry.rs  server.rs  wire.rs
src/remote/: _internal.rs  behaviour.rs  messaging.rs  registry.rs  swarm.rs
src/request/: ask.rs  tell.rs
tests/: console.rs  console_wire_bdd.rs  console_wire_props_bdd.rs  core_actor_id_bdd.rs  core_actor_id_props_bdd.rs  core_actor_lifecycle_bdd.rs  core_actor_lifecycle_props_bdd.rs  core_actor_ref_bdd.rs  core_actor_ref_props_bdd.rs  core_error_bdd.rs  core_error_props_bdd.rs  core_integration.rs  core_links_bdd.rs  core_links_props_bdd.rs  core_mailbox_bdd.rs  core_mailbox_props_bdd.rs  core_message_bdd.rs  core_message_props_bdd.rs  core_registry_bdd.rs  core_registry_props_bdd.rs  core_reply_bdd.rs  core_reply_props_bdd.rs  core_request_ask_bdd.rs  core_request_ask_props_bdd.rs  core_request_tell_bdd.rs  core_request_tell_props_bdd.rs  core_supervision_bdd.rs  core_supervision_props_bdd.rs  supervision_mailbox.rs  tracing_spans.rs
tests/core_steps/: actor_id.rs  actor_lifecycle.rs  actor_ref.rs  error.rs  links.rs  mailbox.rs  message.rs  registry.rs  reply.rs  request_ask.rs  request_tell.rs  supervision.rs
tests/features/actors/: broker.feature  broker.properties.feature  message_bus.feature  (+9 more)
(+96 files in other folders)
