[workspace]
resolver = "2"
members = [".", "actors", "bombay-core", "console", "macros", "mutants-gate"]

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Joel DSouza <joel@devrandom.co>"]
repository = "https://github.com/devrandom-labs/bombay"

[workspace.dependencies]
bombay = { path = ".", version = "0.21.0" }

futures = "0.3"
tokio = "1.47"
# Mailbox channel primitive — chosen on measured evidence (ADR-0001, card #133):
# fastest async candidate, executor-agnostic, move-based, has weak senders.
flume = "0.12"
# Cooperative cancellation for the actor run-loop (card #116, absorbs #55).
# CancellationToken::run_until_cancelled drives graceful stop without a select!.
tokio-util = "0.7"
# Structural pinning for the hand-named request futures (card #118, ADR-0007):
# lets a !Unpin `Sleep` live inline (no per-request box on the timed paths).
# Declarative macro only — no proc-macro, no transitive deps.
pin-project-lite = "0.2"
cucumber = { version = "0.23", features = ["libtest"] }
proptest = "1.11"
rstest = "0.26"
# Typed error domains (card #113): thiserror for derived Display/Error (rule #3:
# no manual impls); downcast-rs to recover a concrete panic payload from the
# type-erased ReplyError trait object.
thiserror = "2.0"
downcast-rs = "2.0"
# Local name→actor registry map (card #119): lock-free reads, purpose-built for
# read-heavy lookup with concurrent register/unregister churn; `compute` gives
# an atomic per-key decision (register-once without check-then-act). Chosen over
# dashmap (sync shard lock held across .await = deadlock class) and scc — see
# the finalized research on card #119.
papaya = "0.2"
# Tier-2 (PTY) console E2E test only (card #83): drive the compiled binary through a
# pseudo-terminal and re-emulate the visible screen for grid assertions.
portable-pty = "0.9"
vt100 = "0.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# ============================================================
# Bombay — god-level lint config (adopted from nexus — card #61).
#
# RESTORED as a lint RATCHET. The bar is DENY workspace-wide, so ALL NEW
# code is held to the nexus/agency hygiene standard from line one. Legacy
# vendored kameo files that predate the bar carry a documented per-file
# `#![allow(..., reason = "…#61")]` quarantine header (zero refactor, zero
# behaviour change on code that M1/M7 will rewrite or delete). Those headers
# are removed file-by-file as the files are cleaned or dropped; the
# de-quarantine checklist lives on issue #61.
#
# DEVIATION from nexus-verbatim: `disallowed_types` (the std::sync::Mutex /
# RwLock ban) is NOT adopted — see clippy.toml for the rationale (the real
# rule is "no lock held across .await", a per-site call, not a type ban).
# ============================================================
[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tokio_unstable)'] }
# NOTE (#61 tail): the optional `[workspace.lints.rust]` tightening —
# `unsafe_code` (kameo's `error.rs` transmute needs a per-site allow),
# `missing_docs`, `unreachable_pub`, `dead_code` — is deferred. Turning it on
# means covering rust-level lints in the per-file quarantine headers too.

[workspace.lints.clippy]
# 1. THE FOUNDATION
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }

# 2. THE RUTHLESS RESTRICTIONS (disallowed_types omitted — see header)
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
dbg_macro = "deny"
print_stdout = "deny"
print_stderr = "deny"
disallowed_methods = "deny"

# 3. MEMORY & PERFORMANCE STRICTNESS
clone_on_ref_ptr = "deny"
as_conversions = "deny"
str_to_string = "deny"
implicit_clone = "deny"

# 4. VARIABLE HYGIENE
shadow_reuse = "deny"
shadow_same = "deny"
shadow_unrelated = "deny"

# 5. THE "NO CHEATING" RULE — every #[allow] must carry a reason.
allow_attributes_without_reason = "deny"

[workspace.metadata.crane]
name = "bombay"

[profile.release]
# NOT a size/perf knob — a correctness one (card #169). bombay-core's actor
# supervision is built on catch_unwind (actor::kind, actor::spawn); `abort`
# makes those boundaries catch nothing, turning an inspectable PanicError into a
# process kill. Cargo ignores `panic` for tests, so flipping this breaks nothing
# the suite can see. `unwind` is also cargo's default: this line exists to state
# the requirement, and bombay-core's cfg(panic = "abort") compile_error enforces
# it for any profile — including a downstream consumer's, which this cannot
# reach.
panic = "unwind"
lto = true
opt-level = 3
codegen-units = 1

[package.metadata.docs.rs]
all-features = true

[package]
name = "bombay"
version = "0.21.0"
edition = "2024"
rust-version = "1.88.0"
description = "Fault-tolerant Async Actors Built on Tokio"
readme = "README.md"
repository = "https://github.com/devrandom-labs/bombay"
license = "MIT OR Apache-2.0"
keywords = ["actor", "tokio"]
categories = ["asynchronous", "concurrency", "rust-patterns"]
include = ["/src"]

[features]
default = ["macros", "tracing"]
macros = ["dep:bombay_macros"]
console = ["dep:rmp-serde", "tokio/net", "tokio/io-util"]
testing = ["console"]
remote = [
  "dep:const-fnv1a-hash",
  "dep:const-str",
  "dep:either",
  "dep:libp2p",
  "dep:linkme",
  "dep:rmp-serde",
]
tracing = ["dep:tracing", "tokio/tracing"]
otel = ["dep:opentelemetry", "dep:tracing-opentelemetry"]
metrics = ["dep:metrics"]
hotpath = ["dep:hotpath", "hotpath/hotpath"]

[dependencies]
bombay_macros = { version = "0.21.0", path = "./macros", optional = true }

const-fnv1a-hash = { version = "1.1.0", optional = true }
const-str = { version = "1.1", features = ["proc"], optional = true }
downcast-rs = "2.0.1"
dyn-clone = "1.0"
either = { version = "1.15.0", optional = true }
futures.workspace = true
hotpath = { version = "0.11", optional = true, features = ["tokio"] }
libp2p = { version = "0.56.0", features = [
  "cbor",
  "kad",
  "noise",
  "mdns",
  "quic",
  "request-response",
  "tcp",
  "tokio",
  "yamux",
], optional = true }
linkme = { version = "0.3.28", optional = true }
metrics = { version = "0.24.2", optional = true }
rmp-serde = { version = "1.3.0", optional = true }
serde = { version = "1.0", features = ["derive"] }
tokio = { workspace = true, features = ["macros", "rt", "sync", "time"] }
tracing = { version = "0.1", optional = true }
opentelemetry = { version = "0.31", optional = true }
tracing-opentelemetry = { version = "0.32", optional = true }

[dev-dependencies]
bombay = { path = ".", features = ["testing"] }
cucumber = { workspace = true }
proptest = { workspace = true }
serde_bytes = "0.11"
criterion = { version = "0.8", features = ["async_tokio"] }
bombay_actors = { path = "actors" }
libp2p = { version = "0.56.0", features = ["serde"] }
metrics-exporter-prometheus = "0.18"
tokio = { version = "1", features = [
  "macros",
  "rt",
  "rt-multi-thread",
  "signal",
  "sync",
  "time",
] }
tokio-stream = { version = "0.1.15", features = ["time"] }
tokio-test = "0.4.4"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[example]]
name = "console"
required-features = ["console"]

[[example]]
name = "remote"
required-features = ["remote"]

[[example]]
name = "custom_swarm"
required-features = ["remote"]

[[example]]
name = "prometheus_metrics"
required-features = ["metrics"]

[[test]]
name = "console_wire_bdd"
required-features = ["testing"]

[[test]]
name = "console_wire_props_bdd"
required-features = ["testing"]

[[test]]
name = "core_actor_id_bdd"
required-features = ["testing"]

[[test]]
name = "core_actor_id_props_bdd"
required-features = ["testing"]

[[test]]
name = "core_error_bdd"
required-features = ["testing"]

[[test]]
name = "core_error_props_bdd"
required-features = ["testing"]

[[test]]
name = "core_message_bdd"
required-features = ["testing"]

[[test]]
name = "core_message_props_bdd"
required-features = ["testing"]

[[test]]
name = "core_reply_bdd"
required-features = ["testing"]

[[test]]
name = "core_reply_props_bdd"
required-features = ["testing"]

[[test]]
name = "core_actor_ref_bdd"
required-features = ["testing"]

[[test]]
name = "core_actor_ref_props_bdd"
required-features = ["testing"]

[[test]]
name = "core_actor_lifecycle_bdd"
required-features = ["testing"]

[[test]]
name = "core_actor_lifecycle_props_bdd"
required-features = ["testing"]

[[test]]
name = "core_request_ask_bdd"
required-features = ["testing"]

[[test]]
name = "core_request_ask_props_bdd"
required-features = ["testing"]

[[test]]
name = "core_request_tell_bdd"
required-features = ["testing"]

[[test]]
name = "core_request_tell_props_bdd"
required-features = ["testing"]

[[test]]
name = "core_mailbox_bdd"
required-features = ["testing"]

[[test]]
name = "core_mailbox_props_bdd"
required-features = ["testing"]

[[test]]
name = "core_registry_bdd"
required-features = ["testing"]

[[test]]
name = "core_registry_props_bdd"
required-features = ["testing"]

[[test]]
name = "core_links_bdd"
required-features = ["testing"]

[[test]]
name = "core_links_props_bdd"
required-features = ["testing"]

[[test]]
name = "core_supervision_bdd"
required-features = ["testing"]

[[test]]
name = "core_supervision_props_bdd"
required-features = ["testing"]

[[bench]]
name = "overhead"
harness = false

[lints]
workspace = true
