[package]
name = "bombay_actors"
version = "0.5.0"
edition = "2024"
rust-version = "1.88.0"
description = "Utility actors for bombay"
readme = "../README.md"
repository = "https://github.com/devrandom-labs/bombay"
license = "MIT OR Apache-2.0"
keywords = ["actor", "tokio", "broker", "pool", "pubsub"]
categories = ["asynchronous", "concurrency", "rust-patterns"]
include = ["/src"]

[dependencies]
futures.workspace = true
glob = "0.3.2"
thiserror = "2.0.12"
bombay.workspace = true
tokio.workspace = true

[dev-dependencies]
tokio-test = "0.4.4"

[lints]
workspace = true
