[package]
name = "bombay_actors"
version = "0.5.0"
edition = "2024"
rust-version = "1.88.0"
description = "Utility actors for bombay"
readme = "../README.md"
repository = "https://github.com/devrandom-labs/bombay"
license = "MIT OR Apache-2.0"
keywords = ["actor", "tokio", "broker", "pool", "pubsub"]
categories = ["asynchronous", "concurrency", "rust-patterns"]
include = ["/src"]

[dependencies]
futures.workspace = true
glob = "0.3.2"
thiserror = "2.0.12"
bombay.workspace = true
tokio.workspace = true

[features]
# Test-only introspection surface (e.g. `message_bus::CountRegistrations`). Off by
# default; auto-activated for this crate's own test builds via the self
# dev-dependency below, because the `nix flake check` nextest run builds with
# default features only (a CLI feature flag would never reach it).
testing = []

[dev-dependencies]
tokio-test = "0.4.4"
bombay = { workspace = true }
bombay_actors = { path = ".", features = ["testing"] }
cucumber = { workspace = true }
proptest = { workspace = true }
tokio = { workspace = true, features = [
  "rt-multi-thread",
  "macros",
  "time",
  "sync",
] }

# --- cucumber BDD runners (card #78) ---------------------------------------
[[test]]
name = "message_bus_bdd"
required-features = ["testing"]

[[test]]
name = "message_bus_props_bdd"
required-features = ["testing"]

[[test]]
name = "broker_bdd"
required-features = ["testing"]

[[test]]
name = "broker_props_bdd"
required-features = ["testing"]

[[test]]
name = "pubsub_bdd"
required-features = ["testing"]

[[test]]
name = "pubsub_props_bdd"
required-features = ["testing"]

[[test]]
name = "pubsub_bug_bdd"
required-features = ["testing"]

[lints]
workspace = true
