[package]
name = "bombay-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Bombay runtime core — the rebuilt local actor spine (mailbox, message, reply, actor loop). Transport- and domain-agnostic."
publish = false

[dependencies]
tokio = { workspace = true, features = ["sync", "rt", "macros", "time"] }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros", "sync", "time"] }
proptest = { workspace = true }
criterion = { version = "0.8", features = ["async_tokio"] }

[[bench]]
name = "mailbox"
harness = false

[lints]
workspace = true
