[package]
name = "bombay-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Bombay runtime core — the rebuilt local actor spine (mailbox, message, reply, actor loop). Transport- and domain-agnostic."
publish = false

[dependencies]
tokio = { workspace = true, features = ["sync", "rt", "macros", "time"] }
flume = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
downcast-rs = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = [
  "rt",
  "rt-multi-thread",
  "macros",
  "sync",
  "time",
] }
proptest = { workspace = true }
criterion = { version = "0.8", features = ["async_tokio"] }
async-channel = "2.5.0"
thingbuf = "0.1.6"
crossbeam-channel = "0.5.15"
bombay_macros = { path = "../macros" }

[[bench]]
name = "mailbox"
harness = false

[[bench]]
name = "channels"
harness = false

[[bench]]
name = "reply"
harness = false

[[bench]]
name = "watcher_fanout"
harness = false

[lints]
workspace = true
