[package]
name = "bombay-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Bombay runtime core — the rebuilt local actor spine (mailbox, message, reply, actor loop). Transport- and domain-agnostic."
publish = false

# Test-only helpers shared by BOTH the src unit tests (via `cfg(test)`) and the
# integration tests in `tests/` (which link the lib externally and so cannot see
# `pub(crate)`). A feature, not `#[doc(hidden)]` — see CLAUDE.md API-design rules.
# Card #150; #151 extends this seam with its counting allocator.
[features]
test-support = []

[dependencies]
tokio = { workspace = true, features = ["sync", "rt", "macros", "time"] }
flume = { workspace = true }
pin-project-lite = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
downcast-rs = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = [
  "rt",
  "rt-multi-thread",
  "macros",
  "sync",
  "time",
  "test-util",
] }
proptest = { workspace = true }
criterion = { version = "0.8", features = ["async_tokio"] }
bombay-core = { path = ".", features = ["test-support"] }
async-channel = "2.5.0"
thingbuf = "0.1.6"
crossbeam-channel = "0.5.15"
bombay_macros = { path = "../macros" }

[[bench]]
name = "mailbox"
harness = false

[[bench]]
name = "channels"
harness = false

[[bench]]
name = "reply"
harness = false

[[bench]]
name = "watcher_fanout"
harness = false

[lints]
workspace = true
