# Isolated fuzzing workspace. The empty [workspace] table makes this crate its
# OWN workspace root so the parent workspace (root Cargo.toml members) stays
# unchanged and the fuzzing dependency tree never enters the main crate's
# audit/deny/dev surface.
[workspace]

[package]
name = "bombay-fuzz"
version = "0.0.0"
edition = "2024"
publish = false
license = "MIT OR Apache-2.0"

[dependencies]
bolero = "0.13.4"
bolero-generator = "0.13.5"
bombay-core = { path = "../bombay-core", features = ["test-support"] }
# The actor-loop target (#164) drives the async `PreparedActor::run` on a
# current_thread runtime; rt + time (for `timeout`/`terminate_bound`) is enough.
tokio = { version = "1", features = ["rt", "time"] }

# bolero requires a `fuzz` profile to exist.
[profile.fuzz]
inherits = "dev"
opt-level = 3
incremental = false
codegen-units = 1
